fixed line numbers not aligning correctly

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,7 @@
 .line-numbers {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 0.04rem;
   font-size: 0.85rem;
   margin-left: 0.6rem;
@@ -15,6 +16,6 @@
 
 .hljs-code {
   padding-top: 0 !important;
-  padding-bottoM: 0 !important;
+  padding-bottom: 0 !important;
   margin: 0 !important;
 }
